--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -134,3 +134,20 @@ author={L. {Jiao} and F. {Zhang} and F. {Liu} and S. {Yang} and L. {Li} and Z. {
  journal={IEEE Access}, 
   title={A Survey of Deep Learning-Based Object Detection}, 
   year={2019},  volume={7},  number={},  pages={128837-128868},}
+
+@book{goodfellow2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    url= {http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+@article{dumoulin2016guide,
+  title="{A guide to convolution arithmetic for deep learning}",
+  author = {{Dumoulin}, Vincent and {Visin}, Francesco},
+  journal = {ArXiv e-prints},
+  eprint = {1603.07285},
+  year={2016},
+  month={mar}
+}
